<resources>
    <string name="app_name">Movie</string>
    <string name="movie">Movie</string>
    <string name="percent">%1$s\%%</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="genres">Genres</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="top_rate">Top Rate</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="recommendations">Recommendations</string>
    <string name="casts">Casts</string>
    <string name="overview">Overview</string>
    <string name="company_production">Company Production</string>
    <string name="more">More</string>
    <string name="trailer_coming_soon">Trailer Coming Soon !</string>
    <string name="no_company_support_for_movie">No company support for movie</string>
    <string name="cast">CAST</string>
    <string name="description">Description</string>
</resources>
