<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".screen.home.HomeContentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:id="@+id/viewPagerMovie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="16:9"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:text="@string/popular"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerMovie" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="411:260"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPopular"
            tools:listitem="@layout/item_movie_horizontal" />

        <TextView
            android:id="@+id/textTopRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:text="@string/top_rate"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewPopular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="411:260"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTopRate"
            tools:listitem="@layout/item_movie_horizontal" />

        <TextView
            android:id="@+id/textUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:text="@string/upcoming"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewRate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUpcoming"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="411:260"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUpcoming"
            tools:listitem="@layout/item_movie_horizontal" />

        <TextView
            android:id="@+id/textNowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:text="@string/now_playing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewUpcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="411:260"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNowPlaying"
            tools:listitem="@layout/item_movie_horizontal" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
