<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageMoviesDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewAlpha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/imageMoviesDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageMoviesDetails" />

    <ImageButton
        android:id="@+id/iconFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:alpha="0.8"
        android:background="@null"
        android:contentDescription="@null"
        android:elevation="@dimen/dp_8"
        android:src="@drawable/ic_favorite_active"
        android:translationZ="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:background="@null"
        android:contentDescription="@null"
        android:src="@drawable/ic_backspace"
        app:layout_constraintBottom_toBottomOf="@id/iconFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iconFavorite" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:alpha="0.4"
        android:background="@null"
        android:contentDescription="@null"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@id/iconFavorite"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/iconFavorite" />

    <LinearLayout
        android:id="@+id/linearLayoutRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:alpha="0.8"
        android:background="@drawable/ic_rate"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/iconFavorite"
        app:layout_constraintEnd_toStartOf="@id/iconFavorite"
        app:layout_constraintTop_toTopOf="@id/iconFavorite">

        <TextView
            android:id="@+id/textViewRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <View
        android:id="@+id/viewSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintDimensionRatio="10:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:backgroundTint="@color/dark_blue"
        app:cardCornerRadius="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSpace" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardViewBackground">

        <ImageButton
            android:id="@+id/imageButtonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:alpha="0.8"
            android:background="@null"
            android:contentDescription="@null"
            android:elevation="@dimen/dp_4"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewMovieTitle" />

        <TextView
            android:id="@+id/textViewMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toStartOf="@id/imageButtonPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewGenresMovieDetails"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_16"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintDimensionRatio="16:4"
            app:layout_constraintEnd_toStartOf="@id/imageButtonPlay"
            app:layout_constraintStart_toStartOf="@id/textViewMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewMovieTitle"
            app:spanCount="4"
            tools:listitem="@layout/item_movie_genre" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_blue"
        android:elevation="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@null">

            <TextView
                android:layout_marginTop="@dimen/dp_20"
                android:id="@+id/textLabelCasts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casts"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewCastsMovie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="411:255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabelCasts"
                tools:itemCount="9"
                tools:listitem="@layout/item_cast" />

            <TextView
                android:id="@+id/textLabelCompanyProduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_production"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerviewCastsMovie" />


            <ImageView
                android:id="@+id/imageViewCompany"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@android:color/white"
                android:contentDescription="@null"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLabelCompanyProduction" />

            <TextView
                android:id="@+id/textViewCompanyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewCompany"
                app:layout_constraintTop_toTopOf="@id/imageViewCompany" />

            <TextView
                android:id="@+id/textViewCountryCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:textSize="@dimen/sp_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewCompany"
                app:layout_constraintTop_toBottomOf="@id/textViewCompanyName" />

            <TextView
                android:id="@+id/textLabelRecommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/recommendations"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCompany" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewRecommendations"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="411:255"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLabelRecommendation"
                tools:itemCount="9"
                tools:listitem="@layout/item_cast" />

            <TextView
                android:id="@+id/textLabelOverView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/overview"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerviewRecommendations" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLabelOverView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
